<resources>
    <string name="app_name">Android Programming Course</string>
    <string name="sub_LinearLayout">LinearLayout 布局（线性布局）</string>
    <string name="sub_TableLayout">TableLayout 布局（表格布局）</string>
    <string name="sub_RelativeLayout">RelativeLayout 布局（相对布局）</string>
    <string name="sub_ConstraintLayout">ConstraintLayout 布局（约束布局）</string>
    <string name="sub_Guideline">Guideline 基准线</string>
    <string name="sub_ListView">ListView 列表视图</string>
    <string name="sub_Spinner">Spinner 下拉列表框</string>
    <string name="sub_Resources">Android 应用资源</string>
    <string name="sub_StateListDrawable">StateListDrawable 资源</string>
    <string name="sub_Toast">单击事件、Toast（提示信息框)</string>
    <string name="sub_RadioButtonAndCheckBox">单选按钮和复选按钮</string>
    <string name="sub_ProgressBarAndSeekBar">ProgressBar（进度条）、SeekBar（拖动条）</string>
    <string name="sub_RatingBar">RatingBar（评分条）</string>
    <string name="sub_AutoCompleteTextView">AutoCompleteTextView（自动完成编辑框）</string>
    <string name="sub_ArrayAdapter">Adapter接口1（ArrayAdapter）</string>
    <string name="sub_SimpleAdapter">Adapter接口2（SimpleAdapter）</string>
    <string name="sub_GridView">GridView（网格视图）</string>
    <string name="sub_CalendarView">CalendarView（日历视图）</string>
    <string name="sub_DatePicker">DatePicker（日期选择器）</string>
    <string name="sub_ScrollView">ScrollView（滚动视图）</string>
    <string name="sub_Dialog1">对话框1</string>
    <string name="sub_Dialog2">对话框1</string>
    <string name="sub_Notification">Notification（通知）</string>
    <string name="sub_Activity_Intent_StartAndFinishActivity">启动、关闭Activity</string>
    <string name="sub_Activity_Intent_ACTION_DIAL">Intent的使用：一键拨号</string>
    <string name="sub_Activity_Intent_ACTION_VIEW">Intent的使用：一键访问网络</string>
    <string name="sub_Activity_Intent_Extra">Activity之间传递数据1</string>
    <string name="sub_IdealWeightCalculator">标准体重计算器</string>
    <string name="sub_StartActivityForResult">启动 Activity 并返回结果</string>
    <string name="sub_UserAvatarSelector">带头像的用户注册页面</string>
    <string name="sub_StaticFragment">Fragment静态用法</string>
    <string name="sub_DynamicFragment">Fragment动态用法</string>
    <string name="sub_Toolbar">ToolBar的使用</string>
    <string name="sub_TextInputLayout">TextInputLayout（增强型文本输入）</string>
    <string name="sub_NavigationView">NavigationView（导航抽屉）</string>
    <string-array name="sub_ListView_items">
        <item>无线局域网</item>
        <item>蓝牙</item>
        <item>蜂窝网络</item>
        <item>个人热点</item>
        <item>VPN</item>
        <item>通知</item>
        <item>声音与触感</item>
        <item>专注</item>
        <item>屏幕使用时间</item>
        <item>通用</item>
        <item>控制中心</item>
        <item>显示和亮度</item>
        <item>主屏幕</item>
        <item>辅助功能</item>
        <item>墙纸</item>
        <item>Siri与搜索</item>
        <item>面容ID和密码</item>
        <item>SOS紧急联络</item>
        <item>暴露通知</item>
        <item>电池</item>
        <item>隐私</item>
    </string-array>
    <string-array name="sub_Spinner_items">
        <item>永不</item>
        <item>每小时</item>
        <item>每天</item>
        <item>工作日</item>
        <item>周末</item>
        <item>每两周</item>
        <item>每月</item>
        <item>每3个月</item>
        <item>每6个月</item>
        <item>每年</item>
    </string-array>
</resources>